--- a/shows.html
+++ b/shows.html
@@ -16,12 +16,12 @@ title: Faking Shows
 </button>
 </div>
 <div class='shows__listings'>
-<h3 class='shows__listings'>Upcomming Events</h3>
+<h3 class='shows__listings-heading'>Upcomming Events</h3>
 <div class='shows__event'>
-<span class='shows__date'>Nov. 7</span>
-<span class='shows__venue'>Century Bar</span>
-<span class='shows__city'>Philadelphia, PA</span>
-<span class='shows__bands'>w/ Black Lung, Queen Elephantine, Mutant Flesh</span>
+<div class='shows__date'>Nov. 7</div>
+<div class='shows__venue'>Century Bar</div>
+<div class='shows__city'>Philadelphia, PA</div>
+<div class='shows__bands'>w/ Black Lung, Queen Elephantine, Mutant Flesh</div>
 <a class='shows__event-link' href='https://www.facebook.com/events/2393979930655350/'>Facebook event page</a>
 </div>
 </div>
