--- a/release-goddamn-cowards.html
+++ b/release-goddamn-cowards.html
@@ -7,15 +7,15 @@ title: Faking  - Goddamn Cowards
 <img alt='Faking, Goddamn Cowards album.' class='release-page__cover' src='images/covers/gc-cover.jpg'>
 <iframe class='release-page__player' src='https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'></iframe>
 <div class='release-page__info'>
-<p class='release-page__date'>Released May 27, 2016</p>
+<p class='release-page__date'>Released May 2016 by Reptilian Records</p>
 <p class='release-page__personel'>Jeff Bowne - guitar/vocals</p>
 <p class='release-page__personel'>Phil Schorn - drums</p>
 <p class='release-page__personel'>Mark Diehl - bass</p>
 <p class='release-page__details'>Recorded and mixed by Arik Victor</p>
-<p class='release-page__details'>at Creep Recording Studio in Nov. 2014</p>
+<p class='release-page__details'>at Creep Recording Studio in 2014</p>
 <p class='release-page__cta'>
 Buy the CD or download from
-<a class='releases__dl-link' href='http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards' target='_blank'>
+<a class='releases__cta-link' href='http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards' target='_blank'>
 Reptilian Records.
 </a>
 </p>
