--- a/press.html
+++ b/press.html
@@ -7,7 +7,7 @@ title: Faking Press
 FAKING is a noise-rock trio from Philladelphia that blends angular aggression, brooding filth, and mathy weirdness. Giant pounding drums, biting bass synth, and harsh guitar riffs that bleed into reverb drenched seasick leads create the odd-time foundation while vocals scream and holler about shitty people doing shitty things.
 </p>
 <p class='press__blurb'>
-Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft, 10) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
+Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 </p>
 <div class='press__write-up'>
 <a class='press__link' href='http://www.metalsucks.net/2016/05/24/exclusive-video-premiere-faking-not-fine'>
