Announce No Comfort

--- a/press.html
+++ b/press.html
@@ -4,7 +4,7 @@ title: Faking Press
 ---
 <div class='press'>
 <p class='press__blurb'>
-FAKING is a noise-rock trio from Philladelphia that blends angular aggression, brooding filth, and mathy weirdness. Giant pounding drums, biting bass synth, and harsh guitar riffs that bleed into reverb drenched seasick leads create the odd-time foundation while vocals scream and holler about shitty people doing shitty things.
+FAKING is a noise-rock trio from Philadelphia that blends angular aggression, brooding filth, and mathy weirdness. Giant pounding drums, biting bass synth, and harsh guitar riffs that bleed into reverb drenched seasick leads create the odd-time foundation while vocals scream and holler about shitty people doing shitty things.
 </p>
 <p class='press__blurb'>
 Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
