--- a/release-no-comfort.html
+++ b/release-no-comfort.html
@@ -13,7 +13,7 @@ title: Faking  - No Comfort
 <p class='release-page__details'>Recorded by Steve Poponi, mixed by Matt Weber, and mastered by Dave Downham.</p>
 <p class='release-page__details'>at Gradwell House Studio in 2018</p>
 <p class='release-page__cta'>
-Pre-order the 12", CD, or download from
+Pre-order the LP or CD
 <a class='releases__cta-link' href='https://faking.bandcamp.com/album/no-comfort' target='_blank'>
 Bandcamp.
 </a>
