--- a/music.html
+++ b/music.html
@@ -17,6 +17,18 @@ title: Faking  Music
 <span class='music__external-link-text'>View on Discogs</span>
 </a>
 </div>
+<div class='music__release music__release--nc'>
+<a class='music__cover-link' href='/release-no-comfort'>
+<img alt='Faking, No Comfort album.' class='music__cover' src='images/covers/nc-cover-small.jpg'>
+</a>
+<div class='music__release-info'>
+<a class='music__title-link' href='/release-no-comfort'>
+<h2 class='music__title'>No Comfort</h2>
+</a>
+<p class='music__details'>a forthcoming LP + CD</p>
+<p class='music__details'>by Slugthrower Records</p>
+</div>
+</div>
 <div class='music__release music__release--gdc'>
 <a class='music__cover-link' href='/release-goddamn-cowards'>
 <img alt='Faking, Goddam Cowards album.' class='music__cover' src='images/covers/gc-cover-small.jpg'>
