the key added to press page

--- a/press.html
+++ b/press.html
@@ -10,10 +10,17 @@ FAKING is a noise rock trio from Philadelphia that blends angular aggression, br
 Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 </p>
 <div class='press__write-up'>
-<a class='press__link' href='https://newnoisemagazine.com/premiere-faking-less-less/'>
+<a class='press__link' href='https://newnoisemagazine.com/premiere-faking-less-less'>
 <i class='fas fa-bullhorn'></i>
 <strong>New Noise Magazine</strong>
 <span>- Video Premiere: "Less & Less"</span>
+</a>
+</div>
+<div class='press__write-up'>
+<a class='press__link' href='https://thekey.xpn.org/2019/10/18/the-skeleton-key-halloween/'>
+<i class='fas fa-bullhorn'></i>
+<strong>The Key</strong>
+<span>- New song debut mentioned</span>
 </a>
 </div>
 <div class='press__write-up'>
