make cover image size more reasonable

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: FAKING - Philly Noise Rock
 <h2 class='releases__hero-heading'>Pre-order the new record!</h2>
 </a>
 <a class='releases__hero-cover-link' href='https://faking.bandcamp.com/album/no-comfort'>
-<img alt='Faking, No Comfort album.' class='releases__hero-cover' src='images/covers/nc-cover.jpg'>
+<img alt='Faking, No Comfort album.' class='releases__hero-cover' src='images/covers/nc-cover-small.jpg'>
 <div class='releases__hero-title'>No Comfort</div>
 </a>
 </div>
