update for No Comfort release.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@ layout: home
 title: FAKING - Philly Noise Rock
 ---
 <div class='releases'>
-<div class='releases__hero'>
-<a class='releases__hero-heading-link' href='https://faking.bandcamp.com/album/no-comfort'>
-<h2 class='releases__hero-heading'>Pre-order the new record!</h2>
-</a>
-<a class='releases__hero-cover-link' href='https://faking.bandcamp.com/album/no-comfort'>
-<img alt='Faking, No Comfort album.' class='releases__hero-cover' src='images/covers/nc-cover-small.jpg'>
-<div class='releases__hero-title'>No Comfort</div>
-</a>
+<div class='releases__cover releases__cover--nc'>
+<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=1837041374/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+<a class='releases__cover-link' href='/release-no-comfort'>No Comfort</a>
 </div>
 <div class='releases__cover releases__cover--gdc'>
 <iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=2854302309/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
