--- a/music.html
+++ b/music.html
@@ -25,7 +25,7 @@ title: Faking  Music
 <a class='music__title-link' href='/release-no-comfort'>
 <h2 class='music__title'>No Comfort</h2>
 </a>
-<p class='music__details'>a forthcoming LP + CD</p>
+<p class='music__details'>an LP + CD</p>
 <p class='music__details'>by Slugthrower Records</p>
 </div>
 </div>
