--- a/press.html
+++ b/press.html
@@ -10,43 +10,50 @@ FAKING is a noise rock trio from Philadelphia that blends angular aggression, br
 Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Network) on guitar/vocals, Phil Schorn (Gunna Vahm, Midiron Blast Shaft) on drums, and Matt Garfield (Mose Giganticus, Hulk Smash) on bass synth.
 </p>
 <div class='press__write-up'>
+<a class='press__link' href='https://cvltnation.com/hear-the-discord-and-disdain-of-faking-no-comfort-lp'>
+<i class='far fa-newspaper'></i>
+<strong>CVLT Nation</strong>
+<span>- "No Comfort" full album stream.</span>
+</a>
+</div>
+<div class='press__write-up'>
 <a class='press__link' href='https://newnoisemagazine.com/premiere-faking-less-less'>
-<i class='fas fa-bullhorn'></i>
+<i class='far fa-newspaper'></i>
 <strong>New Noise Magazine</strong>
 <span>- Video Premiere: "Less & Less"</span>
 </a>
 </div>
 <div class='press__write-up'>
-<a class='press__link' href='https://thekey.xpn.org/2019/10/18/the-skeleton-key-halloween/'>
-<i class='fas fa-bullhorn'></i>
+<a class='press__link' href='https://thekey.xpn.org/2019/10/18/the-skeleton-key-halloween'>
+<i class='far fa-newspaper'></i>
 <strong>The Key</strong>
 <span>- New song debut mentioned</span>
 </a>
 </div>
 <div class='press__write-up'>
 <a class='press__link' href='http://www.metalsucks.net/2016/05/24/exclusive-video-premiere-faking-not-fine'>
-<i class='fas fa-bullhorn'></i>
+<i class='far fa-newspaper'></i>
 <strong>Metal Sucks</strong>
 <span>- Video Premiere: "Not Fine"</span>
 </a>
 </div>
 <div class='press__write-up'>
 <a class='press__link' href='http://www.noecho.net/features/track-premiere-faking-we-are-goddamn-cowards'>
-<i class='fas fa-bullhorn'></i>
+<i class='far fa-newspaper'></i>
 <strong>No Echo</strong>
 <span>- Song Premiere: "We Are Goddamn Cowards"</span>
 </a>
 </div>
 <div class='press__write-up'>
 <a class='press__link' href='http://newnoisemagazine.com/song-premiere-faking-bored'>
-<i class='fas fa-bullhorn'></i>
+<i class='far fa-newspaper'></i>
 <strong>New Noise Magazine</strong>
 <span>- Song Premiere: "You Got Bored"</span>
 </a>
 </div>
 <div class='press__write-up'>
 <a class='press__link' href='http://www.noecho.net/lists/10-philly-bands-not-being-included-in-the-best-punk-articles-but-should-be'>
-<i class='fas fa-bullhorn'></i>
+<i class='far fa-newspaper'></i>
 <strong>No Echo</strong>
 <span>- 10 Philly Bands... by Mike McGinnis (Fight Amp)</span>
 </a>
