--- a/release-no-comfort.html
+++ b/release-no-comfort.html
@@ -5,6 +5,7 @@ title: Faking  - No Comfort
 <div class='release-page'>
 <h2 class='release-page__heading'>No Comfort</h2>
 <img alt='Faking, No Comfort album.' class='release-page__cover' src='images/covers/nc-cover.jpg'>
+<iframe class='release-page__player' src='https://bandcamp.com/EmbeddedPlayer/album=1837041374/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'></iframe>
 <div class='release-page__info'>
 <p class='release-page__date'>Released November 2019 by Slugthrower Records</p>
 <p class='release-page__personel'>Jeff Bowne - electric guitar / vocals</p>
@@ -13,7 +14,7 @@ title: Faking  - No Comfort
 <p class='release-page__details'>Recorded by Steve Poponi, mixed by Matt Weber, and mastered by Dave Downham.</p>
 <p class='release-page__details'>at Gradwell House Studio in 2018</p>
 <p class='release-page__cta'>
-Pre-order the LP or CD
+Buy the LP, CD, and download from
 <a class='releases__cta-link' href='https://faking.bandcamp.com/album/no-comfort' target='_blank'>
 Bandcamp.
 </a>
