--- a/release-goddamn-cowards.html
+++ b/release-goddamn-cowards.html
@@ -14,7 +14,13 @@ title: Faking  - Goddamn Cowards
 <p class='release-page__details'>Recorded and mixed by Arik Victor</p>
 <p class='release-page__details'>at Creep Recording Studio in 2014</p>
 <p class='release-page__cta'>
-Buy the CD or download from
+Download from
+<a class='releases__cta-link' href='https://faking.bandcamp.com/album/goddamn-cowards-2' target='_blank'>
+Bandcamp.
+</a>
+</p>
+<p class='release-page__cta'>
+Buy the CD from
 <a class='releases__cta-link' href='http://www.reptilianrecords.com/products/572116-faking-goddamn-cowards' target='_blank'>
 Reptilian Records.
 </a>
