add press photos to press page

--- a/shows.html
+++ b/shows.html
@@ -6,26 +6,27 @@ title: Faking Shows
 <h2 class='shows__heading'>Live Shows</h2>
 <div class='shows__row'>
 <button class='shows__image-button' data-gallery-image-button=''>
-<img alt='Faking live.' class='shows__photo' src='images/live/livespazz.png'>
+<img alt='Faking live.' class='shows__photo' data-image='images/live/livespazz.png' src='images/live/livespazz-sm.png'>
 </button>
 <button class='shows__image-button' data-gallery-image-button=''>
-<img alt='Faking live.' class='shows__photo' src='images/live/livems.jpg'>
+<img alt='Faking live.' class='shows__photo' data-image='images/live/livems.jpg' src='images/live/livems-sm.jpg'>
 </button>
 <button class='shows__image-button' data-gallery-image-button=''>
-<img alt='Faking live.' class='shows__photo' src='images/live/livecen.jpg'>
+<img alt='Faking live.' class='shows__photo' data-image='images/live/livecen.jpg' src='images/live/livecen-sm.jpg'>
 </button>
 </div>
 <div class='shows__listings'>
 </div>
 <div class='shows__row'>
 <button class='shows__image-button' data-gallery-image-button=''>
-<img alt='Faking live.' class='shows__photo' src='images/live/livekfn.jpg'>
+<img alt='Faking live.' class='shows__photo' data-image='images/live/livekfn.jpg' src='images/live/livekfn-sm.jpg'>
 </button>
 <button class='shows__image-button' data-gallery-image-button=''>
-<img alt='Faking live.' class='shows__photo' src='images/live/livehide.png'>
+<img alt='Faking live.' class='shows__photo' data-image='images/live/livehide.png' src='images/live/livehide-sm.png'>
 </button>
 <button class='shows__image-button' data-gallery-image-button=''>
-<img alt='Faking live.' class='shows__photo' src='images/live/liveny.png'>
+<img alt='Faking live.' class='shows__photo' data-image='images/live/liveny.png' src='images/live/liveny-sm.png'>
 </button>
 </div>
 </div>
+<script src='image-gallery.js'></script>
