--- a/press.html
+++ b/press.html
@@ -54,8 +54,28 @@ Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Netw
 <div class='press__write-up'>
 <a class='press__link' href='http://www.noecho.net/lists/10-philly-bands-not-being-included-in-the-best-punk-articles-but-should-be'>
 <i class='far fa-newspaper'></i>
+<span>
 <strong>No Echo</strong>
 <span>- 10 Philly Bands... by Mike McGinnis (Fight Amp)</span>
+</span>
 </a>
 </div>
+<div class='press__gallery' data-press-gallery=''>
+<h2 class='press__gallery-instructions'>
+Click one of these images for full size hi-res press photos:
+</h2>
+<button class='press__image-button' data-press-gallery-image-button=''>
+<img alt='Faking' class='press__photo' data-image='images/press/faking1.jpg' src='images/press/thin-faking1.jpg'>
+</button>
+<button class='press__image-button' data-press-gallery-image-button=''>
+<img alt='Faking' class='press__photo' data-image='images/press/faking3.jpg' src='images/press/thin-faking3.jpg'>
+</button>
+<button class='press__image-button' data-press-gallery-image-button=''>
+<img alt='Faking' class='press__photo' data-image='images/press/faking2.jpg' src='images/press/thin-faking2.jpg'>
+</button>
+<button class='press__image-button' data-press-gallery-image-button=''>
+<img alt='Faking' class='press__photo' data-image='images/press/faking4.jpg' src='images/press/thin-faking4.jpg'>
+</button>
 </div>
+</div>
+<script src='press-gallery.js'></script>
