add id to press photos

--- a/press.html
+++ b/press.html
@@ -60,7 +60,7 @@ Local ugly-music veterans Jeff Bowne (Gunna Vahm, Dangerbird, Psychic Teens Netw
 </span>
 </a>
 </div>
-<div class='press__gallery' data-press-gallery=''>
+<div class='press__gallery' data-press-gallery='' id='photos'>
 <h2 class='press__gallery-instructions'>
 Click one of these images for full size hi-res press photos:
 </h2>
