update shows page for summer 2022

--- a/shows.html
+++ b/shows.html
@@ -16,6 +16,35 @@ title: Faking Shows
 </button>
 </div>
 <div class='shows__listings'>
+<h3 class='shows__listings-heading'>Recent & Upcomming Shows</h3>
+<div class='shows__event'>
+<div class='shows__date'>April 28, 2022</div>
+<div class='shows__venue'>Kung Fu Necktie</div>
+<div class='shows__city'>Philadelphia, PA</div>
+<div class='shows__bands'>w/ Stinking Lizaveta, Microwaves</div>
+<a class='shows__event-link' href='https://www.facebook.com/events/951155909107390'>Facebook event page</a>
+</div>
+<div class='shows__event'>
+<div class='shows__date'>July 29, 2022</div>
+<div class='shows__venue'>Ortlieb's</div>
+<div class='shows__city'>Philadelphia, PA</div>
+<div class='shows__bands'>w/ Sunburster, Wailin Storms, Tangled Up</div>
+<a class='shows__event-link' href='https://www.facebook.com/events/809627310194219'>Facebook event page</a>
+</div>
+<div class='shows__event'>
+<div class='shows__date'>August 26, 2022</div>
+<div class='shows__venue'>brillobox</div>
+<div class='shows__city'>Pittsburgh, PA</div>
+<div class='shows__bands'>w/ Brown Angel, T-Tops, AutoReplicant</div>
+<a class='shows__event-link' href='https://www.facebook.com/brilloboxpgh/'>Facebook event page</a>
+</div>
+<div class='shows__event'>
+<div class='shows__date'>August 27, 2022</div>
+<div class='shows__venue'>The Royal Oaks</div>
+<div class='shows__city'>Youngstown, OH</div>
+<div class='shows__bands'>w/ Brown Angel, Daikaiju, Rebreather, DAGGRS, etc.</div>
+<a class='shows__event-link' href='https://www.facebook.com/events/524128022849811'>Facebook event page</a>
+</div>
 </div>
 <div class='shows__row'>
 <button class='shows__image-button' data-gallery-image-button=''>
