Update shows html in github editor to just link to ig in the heading

--- a/shows.html
+++ b/shows.html
@@ -16,10 +16,8 @@ title: Faking Shows
 </button>
 </div>
 <div class='shows__listings'>
-<h3 class='shows__listings-heading'>Recent & Upcomming Shows</h3>
-<div class='shows__event'>
-<div class='shows__date'>Check out our <a class='shows__event-link' href='https://www.instagram.com/faking_band/' target='_blank'>instagram</a> for show info</div>
-</div>
+<h3 class='shows__listings-heading'>Check out our <a class='shows__event-link' href='https://www.instagram.com/faking_band/' target='_blank'>instagram</a> for show info</h3>
+<!-- <h3 class='shows__listings-heading'>Recent & Upcomming Shows</h3> -->
 <!-- <div class='shows__event'>
 <div class='shows__date'>August 27, 2022</div>
 <div class='shows__venue'>The Royal Oaks</div>
